--- a/graf.ui
+++ b/graf.ui
@@ -39,6 +39,9 @@
     </property>
    </widget>
    <widget class="QPushButton" name="display_right">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>164</x>
@@ -52,6 +55,9 @@
     </property>
    </widget>
    <widget class="QPushButton" name="display_left">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>110</x>
@@ -78,6 +84,9 @@
     </property>
    </widget>
    <widget class="QPushButton" name="delete_2">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>110</x>
@@ -91,6 +100,9 @@
     </property>
    </widget>
    <widget class="QPushButton" name="create">
+    <property name="enabled">
+     <bool>false</bool>
+    </property>
     <property name="geometry">
      <rect>
       <x>110</x>
