--- a/graf.ui
+++ b/graf.ui
@@ -40,7 +40,7 @@
    </widget>
    <widget class="QPushButton" name="display_right">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
@@ -56,7 +56,7 @@
    </widget>
    <widget class="QPushButton" name="display_left">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
@@ -83,30 +83,14 @@
      <string>edit</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="delete_2">
+   <widget class="QPushButton" name="create">
     <property name="enabled">
-     <bool>false</bool>
+     <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
       <x>110</x>
       <y>170</y>
-      <width>91</width>
-      <height>21</height>
-     </rect>
-    </property>
-    <property name="text">
-     <string>delete</string>
-    </property>
-   </widget>
-   <widget class="QPushButton" name="create">
-    <property name="enabled">
-     <bool>false</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>110</x>
-      <y>200</y>
       <width>91</width>
       <height>21</height>
      </rect>
