--- a/graf.ui
+++ b/graf.ui
@@ -99,6 +99,32 @@
      <string>create new</string>
     </property>
    </widget>
+   <widget class="QPushButton" name="save2file">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>480</y>
+      <width>91</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>save points </string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="file_disp">
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>520</y>
+      <width>141</width>
+      <height>22</height>
+     </rect>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
